deploy/kubernetes/base/massion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: massion
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: massion
  ports:
    - name: https
      port: 443
      targetPort: https
