deploy/kubernetes/base/surreal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: surrealdb
  ports:
    - name: http
      port: 8000
      targetPort: 8000
